<?xml version="1.0" encoding="utf-8"?>
<!--activity_dinamic-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCF3F6"
    android:orientation="horizontal"
    android:theme="@style/Theme.LabaL"
    tools:context=".MainActivity"
    tools:ignore="MissingDefaultResource">
    <!--android:theme="@style/Theme.LabaL"-->


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="67dp"
                    android:layout_weight="1"
                    android:text="@string/text_title"
                    android:textAlignment="center"
                    android:textColor="@color/purple_200"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="478dp"
                    android:layout_height="108dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text"
                        android:layout_width="match_parent"
                        android:layout_height="57dp"
                        android:background="#C5BA12D7"
                        android:hint="@string/text_text" />

                </com.google.android.material.textfield.TextInputLayout>

                <ListView
                    android:id="@+id/list"
                    android:layout_width="392dp"
                    android:descendantFocusability="blocksDescendants"
                    android:layout_height="237dp"
                    android:layout_weight="1">


                </ListView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/buttonAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="59dp"
                    android:layout_weight="0.1"
                    android:text="@string/text_buttonAdd"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/buttonSel"
                    android:layout_width="132dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="@string/text_buttonSelected" />

                <Button
                    android:id="@+id/buttonNoSel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="@string/text_buttonNoSel" />

                <Button
                    android:id="@+id/buttonPrint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="@string/text_buttonPrint" />

                <Button
                    android:id="@+id/buttonChange"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="@string/text_buttonChange" />

                <Button
                    android:id="@+id/buttonDel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="@string/text_buttonDel" />

                <Button
                    android:id="@+id/buttonSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="@string/text_buttonSearch" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/buttonSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Сохранить" />

                <Button
                    android:id="@+id/buttonLoad1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Загрузить" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="466dp"
            android:layout_height="match_parent">

        </TableRow>
    </TableLayout>

</LinearLayout>