<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="339dp"
                android:layout_height="wrap_content"
                android:text="@string/text_title"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold|italic" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/titleAdd"
                android:layout_width="339dp"
                android:layout_height="wrap_content"
                android:text="Добавить"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold|italic" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="86dp"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text"
                    android:layout_width="match_parent"
                    android:layout_height="82dp"
                    android:background="#DCF3F6"
                    android:hint="@string/text_text" />
            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/count"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="#DCF3F6"
                    android:hint="Number" />
            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/text_buttonAdd" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="Назад" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ListView
                android:id="@+id/list"
                android:layout_width="286dp"
                android:layout_height="524dp"
                android:layout_weight="1"
                android:baselineAligned="false"

                android:choiceMode="singleChoice"
                android:descendantFocusability="blocksDescendants"
                android:focusable="false"
                android:focusableInTouchMode="false"></ListView>

        </TableRow>
    </TableLayout>
</FrameLayout>
<!--<TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="339dp"
                android:layout_height="wrap_content"
                android:text="@string/text_title"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold|italic" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="86dp"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text"
                    android:layout_width="match_parent"
                    android:layout_height="82dp"
                    android:background="#DCF3F6"
                    android:hint="@string/text_text" />
            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/text_buttonAdd" />

            <Button
                android:id="@+id/buttonPrint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_buttonPrint" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonNoSel"
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/text_buttonNoSel" />

            <Button
                android:id="@+id/buttonSel"
                android:layout_width="229dp"
                android:layout_height="wrap_content"
                android:text="@string/text_buttonSelected" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonSearch"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_buttonSearch" />

            <Button
                android:id="@+id/buttonChange"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_buttonChange" />

            <Button
                android:id="@+id/buttonDel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/text_buttonDel" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ListView
                android:id="@+id/list"
                android:layout_width="286dp"
                android:layout_height="524dp"
                android:layout_weight="1"
                android:baselineAligned="false"

                android:choiceMode="singleChoice"
                android:descendantFocusability="blocksDescendants"
                android:focusable="false"
                android:focusableInTouchMode="false"></ListView>

        </TableRow>
    </TableLayout>-->